# qspi_shell

./: CMakeLists.txt  Kconfig.bk  README.md  prj.conf
hex_files/: zephyr-qspi-v1.6.2.hex  zephyr-qspi-v1.6.hex  zephyr-spim-v1.6.2.hex  zephyr-spim-v1.6.hex  zephyr-v1.5.1.hex  zephyr-v1.5.2.hex  zephyr-v1.5.hex  zephyr-v1.6.1-qspi.hex  zephyr-v1.6.1-spim.hex
scripts/: otp_jtag_bringup_fff.py  otp_jtag_bringup_test.py  wifiutils.py
src/: device.c  qspi_if.c  qspi_if.h  qspi_main.c  rpu_hw_if.c  spi_if.c
